library/foundation/include/virgil/crypto/foundation/vscf_ed25519.h

//
//  Handles implementation details.
//
typedef struct vscf_ed25519_t vscf_ed25519_t;
//
//  Cast to the 'vscf_impl_t' type.
//
VSCF_PUBLIC vscf_impl_t *
vscf_ed25519_impl(vscf_ed25519_t *self);
//
//  Copy given implementation context by increasing reference counter.
//
VSCF_PUBLIC vscf_ed25519_t *
vscf_ed25519_shallow_copy(vscf_ed25519_t *self);
//
//  Setup predefined values to the uninitialized class dependencies.
//
VSCF_PUBLIC vscf_status_t
vscf_ed25519_setup_defaults(vscf_ed25519_t *self) VSCF_NODISCARD;
//
//  Generate new private key.
//  Note, this operation might be slow.
//
VSCF_PUBLIC vscf_impl_t *
vscf_ed25519_generate_key(const vscf_ed25519_t *self, vscf_error_t *error);
//
//  Check if algorithm can decrypt data with a given key.
//  However, success result of decryption is not guaranteed.
//
VSCF_PUBLIC bool
vscf_ed25519_can_decrypt(const vscf_ed25519_t *self, const vscf_impl_t *private_key, size_t data_len);
//
//  Calculate required buffer length to hold the decrypted data.
//
VSCF_PUBLIC size_t
vscf_ed25519_decrypted_len(const vscf_ed25519_t *self, const vscf_impl_t *private_key, size_t data_len);
//
//  Decrypt given data.
//
VSCF_PUBLIC vscf_status_t
vscf_ed25519_decrypt(const vscf_ed25519_t *self, const vscf_impl_t *private_key, vsc_data_t data,
        vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Check if algorithm can sign data digest with a given key.
//
VSCF_PUBLIC bool
vscf_ed25519_can_sign(const vscf_ed25519_t *self, const vscf_impl_t *private_key);
//
//  Return length in bytes required to hold signature.
//  Return zero if a given private key can not produce signatures.
//
VSCF_PUBLIC size_t
vscf_ed25519_signature_len(const vscf_ed25519_t *self, const vscf_impl_t *private_key);
//
//  Sign data digest with a given private key.
//
VSCF_PUBLIC vscf_status_t
vscf_ed25519_sign_hash(const vscf_ed25519_t *self, const vscf_impl_t *private_key, vscf_alg_id_t hash_id,
        vsc_data_t digest, vsc_buffer_t *signature) VSCF_NODISCARD;
//
//  Check if algorithm can verify data digest with a given key.
//
VSCF_PUBLIC bool
vscf_ed25519_can_verify(const vscf_ed25519_t *self, const vscf_impl_t *public_key);
//
//  Verify data digest with a given public key and signature.
//
VSCF_PUBLIC bool
vscf_ed25519_verify_hash(const vscf_ed25519_t *self, const vscf_impl_t *public_key, vscf_alg_id_t hash_id,
        vsc_data_t digest, vsc_data_t signature);
//
//  Compute shared key for 2 asymmetric keys.
//  Note, computed shared key can be used only within symmetric cryptography.
//
VSCF_PUBLIC vscf_status_t
vscf_ed25519_compute_shared_key(const vscf_ed25519_t *self, const vscf_impl_t *public_key,
        const vscf_impl_t *private_key, vsc_buffer_t *shared_key) VSCF_NODISCARD;
//
//  Return number of bytes required to hold shared key.
//  Expect Public Key or Private Key.
//
VSCF_PUBLIC size_t
vscf_ed25519_shared_key_len(const vscf_ed25519_t *self, const vscf_impl_t *key);
//
//  Return length in bytes required to hold encapsulated shared key.
//
VSCF_PUBLIC size_t
vscf_ed25519_kem_shared_key_len(const vscf_ed25519_t *self, const vscf_impl_t *key);
//
//  Return length in bytes required to hold encapsulated key.
//
VSCF_PUBLIC size_t
vscf_ed25519_kem_encapsulated_key_len(const vscf_ed25519_t *self, const vscf_impl_t *public_key);
//
//  Generate a shared key and a key encapsulated message.
//
VSCF_PUBLIC vscf_status_t
vscf_ed25519_kem_encapsulate(const vscf_ed25519_t *self, const vscf_impl_t *public_key, vsc_buffer_t *shared_key,
        vsc_buffer_t *encapsulated_key) VSCF_NODISCARD;
//
//  Decapsulate the shared key.
//
VSCF_PUBLIC vscf_status_t
vscf_ed25519_kem_decapsulate(const vscf_ed25519_t *self, vsc_data_t encapsulated_key, const vscf_impl_t *private_key,
        vsc_buffer_t *shared_key) VSCF_NODISCARD;