wrappers/python/virgil_crypto_lib/foundation/_c_bridge/_vscf_ed25519.py


    def vscf_ed25519_can_decrypt(self, ctx, private_key, data_len):
        """Check if algorithm can decrypt data with a given key.
        However, success result of decryption is not guaranteed."""
        vscf_ed25519_can_decrypt = self._lib.vscf_ed25519_can_decrypt
        vscf_ed25519_can_decrypt.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t), c_size_t]
        vscf_ed25519_can_decrypt.restype = c_bool
        return vscf_ed25519_can_decrypt(ctx, private_key, data_len)

    def vscf_ed25519_decrypted_len(self, ctx, private_key, data_len):
        """Calculate required buffer length to hold the decrypted data."""
        vscf_ed25519_decrypted_len = self._lib.vscf_ed25519_decrypted_len
        vscf_ed25519_decrypted_len.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t), c_size_t]
        vscf_ed25519_decrypted_len.restype = c_size_t
        return vscf_ed25519_decrypted_len(ctx, private_key, data_len)

    def vscf_ed25519_decrypt(self, ctx, private_key, data, out):
        """Decrypt given data."""
        vscf_ed25519_decrypt = self._lib.vscf_ed25519_decrypt
        vscf_ed25519_decrypt.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t), vsc_data_t, POINTER(vsc_buffer_t)]
        vscf_ed25519_decrypt.restype = c_int
        return vscf_ed25519_decrypt(ctx, private_key, data, out)

    def vscf_ed25519_can_sign(self, ctx, private_key):
        """Check if algorithm can sign data digest with a given key."""
        vscf_ed25519_can_sign = self._lib.vscf_ed25519_can_sign
        vscf_ed25519_can_sign.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t)]
        vscf_ed25519_can_sign.restype = c_bool
        return vscf_ed25519_can_sign(ctx, private_key)

    def vscf_ed25519_signature_len(self, ctx, private_key):
        """Return length in bytes required to hold signature.
        Return zero if a given private key can not produce signatures."""
        vscf_ed25519_signature_len = self._lib.vscf_ed25519_signature_len
        vscf_ed25519_signature_len.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t)]
        vscf_ed25519_signature_len.restype = c_size_t
        return vscf_ed25519_signature_len(ctx, private_key)

    def vscf_ed25519_sign_hash(self, ctx, private_key, hash_id, digest, signature):
        """Sign data digest with a given private key."""
        vscf_ed25519_sign_hash = self._lib.vscf_ed25519_sign_hash
        vscf_ed25519_sign_hash.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t), c_int, vsc_data_t, POINTER(vsc_buffer_t)]
        vscf_ed25519_sign_hash.restype = c_int
        return vscf_ed25519_sign_hash(ctx, private_key, hash_id, digest, signature)

    def vscf_ed25519_can_verify(self, ctx, public_key):
        """Check if algorithm can verify data digest with a given key."""
        vscf_ed25519_can_verify = self._lib.vscf_ed25519_can_verify
        vscf_ed25519_can_verify.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t)]
        vscf_ed25519_can_verify.restype = c_bool
        return vscf_ed25519_can_verify(ctx, public_key)

    def vscf_ed25519_verify_hash(self, ctx, public_key, hash_id, digest, signature):
        """Verify data digest with a given public key and signature."""
        vscf_ed25519_verify_hash = self._lib.vscf_ed25519_verify_hash
        vscf_ed25519_verify_hash.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t), c_int, vsc_data_t, vsc_data_t]
        vscf_ed25519_verify_hash.restype = c_bool
        return vscf_ed25519_verify_hash(ctx, public_key, hash_id, digest, signature)

    def vscf_ed25519_compute_shared_key(self, ctx, public_key, private_key, shared_key):
        """Compute shared key for 2 asymmetric keys.
        Note, computed shared key can be used only within symmetric cryptography."""
        vscf_ed25519_compute_shared_key = self._lib.vscf_ed25519_compute_shared_key
        vscf_ed25519_compute_shared_key.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t), POINTER(vscf_impl_t), POINTER(vsc_buffer_t)]
        vscf_ed25519_compute_shared_key.restype = c_int
        return vscf_ed25519_compute_shared_key(ctx, public_key, private_key, shared_key)

    def vscf_ed25519_shared_key_len(self, ctx, key):
        """Return number of bytes required to hold shared key.
        Expect Public Key or Private Key."""
        vscf_ed25519_shared_key_len = self._lib.vscf_ed25519_shared_key_len
        vscf_ed25519_shared_key_len.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t)]
        vscf_ed25519_shared_key_len.restype = c_size_t
        return vscf_ed25519_shared_key_len(ctx, key)

    def vscf_ed25519_kem_shared_key_len(self, ctx, key):
        """Return length in bytes required to hold encapsulated shared key."""
        vscf_ed25519_kem_shared_key_len = self._lib.vscf_ed25519_kem_shared_key_len
        vscf_ed25519_kem_shared_key_len.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t)]
        vscf_ed25519_kem_shared_key_len.restype = c_size_t
        return vscf_ed25519_kem_shared_key_len(ctx, key)

    def vscf_ed25519_kem_encapsulated_key_len(self, ctx, public_key):
        """Return length in bytes required to hold encapsulated key."""
        vscf_ed25519_kem_encapsulated_key_len = self._lib.vscf_ed25519_kem_encapsulated_key_len
        vscf_ed25519_kem_encapsulated_key_len.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t)]
        vscf_ed25519_kem_encapsulated_key_len.restype = c_size_t
        return vscf_ed25519_kem_encapsulated_key_len(ctx, public_key)

    def vscf_ed25519_kem_encapsulate(self, ctx, public_key, shared_key, encapsulated_key):
        """Generate a shared key and a key encapsulated message."""
        vscf_ed25519_kem_encapsulate = self._lib.vscf_ed25519_kem_encapsulate
        vscf_ed25519_kem_encapsulate.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_impl_t), POINTER(vsc_buffer_t), POINTER(vsc_buffer_t)]
        vscf_ed25519_kem_encapsulate.restype = c_int
        return vscf_ed25519_kem_encapsulate(ctx, public_key, shared_key, encapsulated_key)

    def vscf_ed25519_kem_decapsulate(self, ctx, encapsulated_key, private_key, shared_key):
        """Decapsulate the shared key."""
        vscf_ed25519_kem_decapsulate = self._lib.vscf_ed25519_kem_decapsulate
        vscf_ed25519_kem_decapsulate.argtypes = [POINTER(vscf_ed25519_t), vsc_data_t, POINTER(vscf_impl_t), POINTER(vsc_buffer_t)]
        vscf_ed25519_kem_decapsulate.restype = c_int
        return vscf_ed25519_kem_decapsulate(ctx, encapsulated_key, private_key, shared_key)

    def vscf_ed25519_setup_defaults(self, ctx):
        """Setup predefined values to the uninitialized class dependencies."""
        vscf_ed25519_setup_defaults = self._lib.vscf_ed25519_setup_defaults
        vscf_ed25519_setup_defaults.argtypes = [POINTER(vscf_ed25519_t)]
        vscf_ed25519_setup_defaults.restype = c_int
        return vscf_ed25519_setup_defaults(ctx)

    def vscf_ed25519_generate_key(self, ctx, error):
        """Generate new private key.
        Note, this operation might be slow."""
        vscf_ed25519_generate_key = self._lib.vscf_ed25519_generate_key
        vscf_ed25519_generate_key.argtypes = [POINTER(vscf_ed25519_t), POINTER(vscf_error_t)]
        vscf_ed25519_generate_key.restype = POINTER(vscf_impl_t)
        return vscf_ed25519_generate_key(ctx, error)

    def vscf_ed25519_shallow_copy(self, ctx):
        vscf_ed25519_shallow_copy = self._lib.vscf_ed25519_shallow_copy
        vscf_ed25519_shallow_copy.argtypes = [POINTER(vscf_ed25519_t)]
        vscf_ed25519_shallow_copy.restype = POINTER(vscf_ed25519_t)
        return vscf_ed25519_shallow_copy(ctx)

    def vscf_ed25519_impl(self, ctx):
        vscf_ed25519_impl = self._lib.vscf_ed25519_impl
        vscf_ed25519_impl.argtypes = [POINTER(vscf_ed25519_t)]
        vscf_ed25519_impl.restype = POINTER(vscf_impl_t)
        return vscf_ed25519_impl(ctx)
